tests/algorithms/x/Python/strings/manacher.out
Traceback (most recent call last):
  File "/workspace/mochi/tests/algorithms/x/Python/strings/manacher.py", line 77, in <module>
    main()
  File "/workspace/mochi/tests/algorithms/x/Python/strings/manacher.py", line 75, in main
    print(palindromic_string("abbbaba"))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/workspace/mochi/tests/algorithms/x/Python/strings/manacher.py", line 56, in palindromic_string
    while j - k >= 0 and j + k < m and new_input_string[j + k:j + k + 1] == new_input_string[j - k:j - k + 1]:
                                       ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
TypeError: slice indices must be integers or None or have an __index__ method